[package]
name = "jubjub-plonk"
version = "0.1.0"
authors = ["Linfeng (Daniel) Zhou, daniel.linfeng.zhou@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-bls12_381 = "0.1"
merlin = "2"
lazy_static = "1.3.0"
hades252 = { git = "https://github.com/dusk-network/hades252", version = "0.5.0" }
dusk-plonk = {version = "0.1", features = ["trace-print"]}

rand = "0.7"
subtle = "2.2.2"

[dev-dependencies]
rand_core = "0.5"
criterion = "0.3"

[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false


[profile.release]
debug = false
panic = 'abort'
lto = true
incremental = false
codegen-units = 1
